pod2pod-with-netpol-trace.txt
sh-5.2# ovn-trace --ct new 'inport=="client_client-5bf6767dd6-7sspp" && eth.src==0a:58:0a:f4:01:03 && eth.dst==0a:58:0a:f4:01:01 && ip4.src==10.244.1.3 && ip4.dst==10.244.0.
6 && ip.ttl==64 && tcp && tcp.src==36363 && tcp.dst==31881'                                                                                                                  
# tcp,reg14=0x3,vlan_tci=0x0000,dl_src=0a:58:0a:f4:01:03,dl_dst=0a:58:0a:f4:01:01,nw_src=10.244.1.3,nw_dst=10.244.0.6,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_
dst=31881,tcp_flags=0                                                                                                                                                        
                                                                                                                                                                             
ingress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp")                                                                                                            
-----------------------------------------------------------------                                                                                                            
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d                                                                                                      
    reg0[15] = check_in_port_sec();                                                                                                                                          
    next;                                                                                                                                                                    
 4. ls_in_pre_acl (northd.c:7241): ip, priority 100, uuid e91280d0                                                                                                           
    reg0[0] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 5. ls_in_pre_lb (northd.c:7428): ip, priority 100, uuid ee45626b                                                                                                            
    reg0[2] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 6. ls_in_pre_stateful (northd.c:7451): reg0[2] == 1, priority 110, uuid 5b4b6a90                                                                                            
    ct_lb_mark;                          
ct_lb_mark                                                                                                                                                                   
----------                                                                                                                                                                   
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 613c2bdd                                                                                             
    reg0[7] = 1;                                                                                                                                                             
    reg0[9] = 1;                                                                                                                                                             
    next;
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 01c99249
    reg8[30..31] = 1;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid d2e1c520
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid 0c7c7dd9
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid f219d632
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid ff3d56d2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 974bdebe
    reg8[30..31] = 2;
    next(18);
18. ls_in_acl_after_lb_eval (northd.c:7763): reg8[30..31] == 2 && reg0[9] == 1 && (inport == @a14158938165268116446_egressDefaultDeny), priority 2000, uuid 809edba8
    reg8[17] = 1;
    next;
19. ls_in_acl_after_lb_action (northd.c:7895): reg8[17] == 1, priority 1000, uuid 209a8e2a
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
sh-5.2#
