pod2pod-working-ovn-trace.txt
[vagrant@suryavm1 ~]$ oc rsh -c sb-ovsdb -n ovn-kubernetes ovnkube-node-9dtgf                                                                                                
sh-5.2# ovn-trace --ct new 'inport=="client_client-5bf6767dd6-7sspp" && eth.src==0a:58:0a:f4:01:03 && eth.dst==0a:58:0a:f4:01:01 && ip4.src==10.244.1.3 && ip4.dst==10.244.0.
6 && ip.ttl==64 && tcp && tcp.src==36363 && tcp.dst==31881'                                                                                                                  
# tcp,reg14=0x3,vlan_tci=0x0000,dl_src=0a:58:0a:f4:01:03,dl_dst=0a:58:0a:f4:01:01,nw_src=10.244.1.3,nw_dst=10.244.0.6,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_
dst=31881,tcp_flags=0                                                                                                                                                        
                                                                                                                                                                             
ingress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp")                                                                                                            
-----------------------------------------------------------------                                                                                                            
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d                                                                                                      
    reg0[15] = check_in_port_sec();                                                                                                                                          
    next;                                                                                                                                                                    
 4. ls_in_pre_acl (northd.c:7241): ip, priority 100, uuid e91280d0                                                                                                           
    reg0[0] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 5. ls_in_pre_lb (northd.c:7428): ip, priority 100, uuid ee45626b                                                                                                            
    reg0[2] = 1;
    next;
 6. ls_in_pre_stateful (northd.c:7451): reg0[2] == 1, priority 110, uuid 5b4b6a90
    ct_lb_mark;
ct_lb_mark
----------
 7. ls_in_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 613c2bdd
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 01c99249
    reg8[30..31] = 1;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid d2e1c520
    reg8[30..31] = 2;
    next(8);
 8. ls_in_acl_eval (northd.c:8088): ip && !ct.est, priority 1, uuid 36a4fbe1
    reg0[1] = 1;
    next;
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid 0c7c7dd9
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
15. ls_in_pre_hairpin (northd.c:8903): ip && ct.trk, priority 100, uuid f219d632
    reg0[6] = chk_lb_hairpin();
    reg0[12] = chk_lb_hairpin_reply();
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid ff3d56d2
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 974bdebe
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid a06cfb7a
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
20. ls_in_stateful (northd.c:8877): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 7887a147
    ct_commit { ct_mark.blocked = 0; };
    next;
27. ls_in_l2_lkup (northd.c:10583): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:01:01 }, priority 50, uuid b4ee2cd7
    outport = "stor-ovn-worker";
    output;

egress(dp="ovn-worker", inport="client_client-5bf6767dd6-7sspp", outport="stor-ovn-worker")
-------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid 78b8b5ed
    next;
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "stor-ovn-worker", priority 110, uuid e1833376
    next;
 3. ls_out_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 2b307c11
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid fc1e56c9
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid fc1e56c9
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 6b54a8bc
    reg8[30..31] = 2;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid 7512a93e
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7917): 1, priority 0, uuid 84ce3eca
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
 8. ls_out_stateful (northd.c:8881): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid dc7c1376
    ct_commit { ct_mark.blocked = 0; };
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 39505c87
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 0171f0af
    output;
    /* output to "stor-ovn-worker", type "patch" */

ingress(dp="ovn_cluster_router", inport="rtos-ovn-worker")
----------------------------------------------------------
 0. lr_in_admission (northd.c:12977): eth.dst == { 0a:58:a9:fe:01:01, 0a:58:0a:f4:01:01 } && inport == "rtos-ovn-worker" && is_chassis_resident("cr-rtos-ovn-worker"), priori
ty 50, uuid 2df00eb1
    xreg0[0..47] = 0a:58:0a:f4:01:01;
    next;
 1. lr_in_lookup_neighbor (northd.c:13161): 1, priority 0, uuid 87c0bb51
    reg9[2] = 1;
    next;
 2. lr_in_learn_neighbor (northd.c:13170): reg9[2] == 1 || reg9[3] == 0, priority 100, uuid 53e15059
    mac_cache_use;
    next;
12. lr_in_ip_routing_pre (northd.c:13395): 1, priority 0, uuid 53502ff7
    reg7 = 0;
    next;
13. lr_in_ip_routing (northd.c:11771): reg7 == 0 && ip4.dst == 10.244.0.0/24, priority 73, uuid 17023f0e
    ip.ttl--;
    reg8[0..15] = 0;
    reg0 = 100.88.0.4;
    reg1 = 100.88.0.2;
    eth.src = 0a:58:64:58:00:02;
    outport = "rtots-ovn-worker";
    flags.loopback = 1;
    next;
14. lr_in_ip_routing_ecmp (northd.c:13490): reg8[0..15] == 0, priority 150, uuid f6bd3288
    next;
15. lr_in_policy (northd.c:10917): ip4.src == 10.244.0.0/16 && ip4.dst == 10.244.0.0/16, priority 102, uuid c5e84847                                                         
    reg8[0..15] = 0;                                                                                                                                                         
    next;
16. lr_in_policy_ecmp (northd.c:13657): reg8[0..15] == 0, priority 150, uuid 5743d8c1
    next;
17. lr_in_arp_resolve (northd.c:13870): outport == "rtots-ovn-worker" && reg0 == 100.88.0.4, priority 100, uuid bf49e3b4
    eth.dst = 0a:58:64:58:00:04;
    next;
21. lr_in_arp_request (northd.c:14302): 1, priority 0, uuid a3f02d7f
    output;

egress(dp="ovn_cluster_router", inport="rtos-ovn-worker", outport="rtots-ovn-worker")
-------------------------------------------------------------------------------------
 0. lr_out_chk_dnat_local (northd.c:15662): 1, priority 0, uuid 41991236
    reg9[4] = 0;
    next;
 6. lr_out_delivery (northd.c:14348): outport == "rtots-ovn-worker", priority 100, uuid f431bbb9
    output;
    /* output to "rtots-ovn-worker", type "patch" */

ingress(dp="transit_switch", inport="tstor-ovn-worker")
-------------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid baed899d
    reg0[15] = check_in_port_sec();
    next;
 5. ls_in_pre_lb (northd.c:7119): ip && inport == "tstor-ovn-worker", priority 110, uuid a182c415
    next;
27. ls_in_l2_lkup (northd.c:10510): eth.dst == 0a:58:64:58:00:04, priority 50, uuid d7a180ea
    outport = "tstor-ovn-worker2";
    output;

egress(dp="transit_switch", inport="tstor-ovn-worker", outport="tstor-ovn-worker2")
-----------------------------------------------------------------------------------
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 39505c87
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 0171f0af
    output;
    /* output to "tstor-ovn-worker2", type "remote" */
============
[vagrant@suryavm1 ~]$ oc rsh -c sb-ovsdb -n ovn-kubernetes ovnkube-node-lvcbs
sh-5.2# ovn-trace --ct new 'inport=="tstor-ovn-worker" && eth.src==0a:58:64:58:00:02 && eth.dst==0a:58:64:58:00:04 && ip4.src==10.244.1.3 && ip4.dst==10.244.0.6 && ip.ttl==6
4 && tcp && tcp.src==36363 && tcp.dst==31881'                                                                                                                                
# tcp,reg14=0x2,vlan_tci=0x0000,dl_src=0a:58:64:58:00:02,dl_dst=0a:58:64:58:00:04,nw_src=10.244.1.3,nw_dst=10.244.0.6,nw_tos=0,nw_ecn=0,nw_ttl=64,nw_frag=no,tp_src=36363,tp_
dst=31881,tcp_flags=0                                                                                                                                                        
                                                                                                                                                                             
ingress(dp="transit_switch", inport="tstor-ovn-worker")                                                                                                                      
-------------------------------------------------------                                                                                                                      
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid f9b14391                                                                                                      
    reg0[15] = check_in_port_sec();                                                                                                                                          
    next;                                                                                                                                                                    
27. ls_in_l2_lkup (northd.c:10583): eth.dst == 0a:58:64:58:00:04, priority 50, uuid 046ff258                                                                                 
    outport = "tstor-ovn-worker2";                                                                                                                                           
    output;                                                                                                                                                                  
                                                                                                                                                                             
egress(dp="transit_switch", inport="tstor-ovn-worker", outport="tstor-ovn-worker2")                                                                                          
-----------------------------------------------------------------------------------                                                                                          
 1. ls_out_pre_lb (northd.c:7122): ip && outport == "tstor-ovn-worker2", priority 110, uuid 68142b74                                                                         
    ct_clear;                                                                                                                                                                
    next;                                                                                                                                                                    
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 58474fca                                                                                                      
    reg0[15] = check_out_port_sec();                                                                                                                                         
    next;                                                                                                                                                                    
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 55ce0a48                                                                                                      
    output;                                                                                                                                                                  
    /* output to "tstor-ovn-worker2", type "patch" */                     
ingress(dp="ovn_cluster_router", inport="rtots-ovn-worker2")                                                                                                                 
------------------------------------------------------------                                                                                                                 
 0. lr_in_admission (northd.c:12977): eth.dst == 0a:58:64:58:00:04 && inport == "rtots-ovn-worker2", priority 50, uuid cb020687                                              
    xreg0[0..47] = 0a:58:64:58:00:04;                                                                                                                                        
    next;                                                                                                                                                                    
 1. lr_in_lookup_neighbor (northd.c:13161): 1, priority 0, uuid 7d0a74e8                                                                                                     
    reg9[2] = 1;                                                                                                                                                             
    next;                                                                                                                                                                    
 2. lr_in_learn_neighbor (northd.c:13170): reg9[2] == 1 || reg9[3] == 0, priority 100, uuid 69081f9b                                                                         
    mac_cache_use;                                                                                                                                                           
    next;                                                                                                                                                                    
12. lr_in_ip_routing_pre (northd.c:13395): 1, priority 0, uuid f4453af7                                                                                                      
    reg7 = 0;                                                                                                                                                                
    next;                                                                                                                                                                    
13. lr_in_ip_routing (northd.c:11771): ip4.dst == 10.244.0.0/24, priority 74, uuid 87177019                                                                                  
    ip.ttl--;                                                                                                                                                                
    reg8[0..15] = 0;                                                                                                                                                         
    reg0 = ip4.dst;                                                                                                                                                          
    reg1 = 10.244.0.1;                                                                                                                                                       
    eth.src = 0a:58:0a:f4:00:01;                                                                                                                                             
    outport = "rtos-ovn-worker2";                                                                                                                                            
    flags.loopback = 1;                                                                                                                                                      
    next;                                                                                                                                                                    
14. lr_in_ip_routing_ecmp (northd.c:13490): reg8[0..15] == 0, priority 150, uuid 7716948f                                                                                    
    next;                                                                                                                                                                    
15. lr_in_policy (northd.c:10917): ip4.src == 10.244.0.0/16 && ip4.dst == 10.244.0.0/16, priority 102, uuid 8d849598                                                         
    reg8[0..15] = 0;
    next;
16. lr_in_policy_ecmp (northd.c:13657): reg8[0..15] == 0, priority 150, uuid 17ae5adb
    next;
17. lr_in_arp_resolve (northd.c:13870): outport == "rtos-ovn-worker2" && reg0 == 10.244.0.6, priority 100, uuid 4e3da8e9
    eth.dst = 0a:58:0a:f4:00:06;
    next;
20. lr_in_gw_redirect (northd.c:14184): outport == "rtos-ovn-worker2", priority 50, uuid 37156424
    outport = "cr-rtos-ovn-worker2";
    next;
21. lr_in_arp_request (northd.c:14302): 1, priority 0, uuid b810f420
    output;
    /* Replacing type "chassisredirect" outport "cr-rtos-ovn-worker2" with distributed port "rtos-ovn-worker2". */
egress(dp="ovn_cluster_router", inport="rtots-ovn-worker2", outport="rtos-ovn-worker2")
---------------------------------------------------------------------------------------
 0. lr_out_chk_dnat_local (northd.c:15662): 1, priority 0, uuid a6a6cde1
    reg9[4] = 0;
    next;
 6. lr_out_delivery (northd.c:14348): outport == "rtos-ovn-worker2", priority 100, uuid 82836aeb
    output;
    /* output to "rtos-ovn-worker2", type "patch" */

ingress(dp="ovn-worker2", inport="stor-ovn-worker2")
----------------------------------------------------
 0. ls_in_check_port_sec (northd.c:9757): 1, priority 50, uuid f9b14391
    reg0[15] = check_in_port_sec();
    next;
 4. ls_in_pre_acl (northd.c:7119): ip && inport == "stor-ovn-worker2", priority 110, uuid fd8c196c
    next;
 5. ls_in_pre_lb (northd.c:7119): ip && inport == "stor-ovn-worker2", priority 110, uuid 15bbad6a
    next;
 7. ls_in_acl_hint (northd.c:7531): !ct.trk, priority 5, uuid 57ae251f
    reg0[8] = 1;
    reg0[9] = 1;
    next;
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid 5c895f24
    reg8[30..31] = 1;
    next(8);
 9. ls_in_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 9b68b26d
    reg8[30..31] = 2;
    next(8);
 9. ls_in_acl_action (northd.c:7917): 1, priority 0, uuid 8eac48d7
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid ba57f1b6
    reg8[30..31] = 1;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid d4150f14
    reg8[30..31] = 2;
    next(18);
19. ls_in_acl_after_lb_action (northd.c:7917): 1, priority 0, uuid 47d42f6e
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
27. ls_in_l2_lkup (northd.c:10510): eth.dst == 0a:58:0a:f4:00:06, priority 50, uuid 8cfde10a
    outport = "server_server-597c7db97b-pmjdq";
    output;

egress(dp="ovn-worker2", inport="stor-ovn-worker2", outport="server_server-597c7db97b-pmjdq")
---------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7243): ip, priority 100, uuid 59c2f546
    reg0[0] = 1;
    next;
 1. ls_out_pre_lb (northd.c:7430): ip, priority 100, uuid 8bf62ae0
    reg0[2] = 1;
    next;
 2. ls_out_pre_stateful (northd.c:7454): reg0[2] == 1, priority 110, uuid acbe7b22
    ct_lb_mark;
egress(dp="ovn-worker2", inport="stor-ovn-worker2", outport="server_server-597c7db97b-pmjdq")
---------------------------------------------------------------------------------------------
 0. ls_out_pre_acl (northd.c:7243): ip, priority 100, uuid 59c2f546
    reg0[0] = 1;
    next;
 1. ls_out_pre_lb (northd.c:7430): ip, priority 100, uuid 8bf62ae0
    reg0[2] = 1;
    next;
 2. ls_out_pre_stateful (northd.c:7454): reg0[2] == 1, priority 110, uuid acbe7b22
    ct_lb_mark;

ct_lb_mark
----------
 3. ls_out_acl_hint (northd.c:7509): ct.new && !ct.est, priority 7, uuid 0a01b2ff
    reg0[7] = 1;
    reg0[9] = 1;
    next;
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid f1a14480
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 0, priority 500, uuid e4770ee1
    reg8[30..31] = 1;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid f1a14480
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7928): reg8[30..31] == 1, priority 500, uuid 2f824bbe
    reg8[30..31] = 2;
    next(4);
 4. ls_out_acl_eval (northd.c:8090): ip && !ct.est, priority 1, uuid f1a14480
    reg0[1] = 1;
    next;
 5. ls_out_acl_action (northd.c:7917): 1, priority 0, uuid ac64bfa9
    reg8[16] = 0;
    reg8[17] = 0;
    reg8[18] = 0;
    reg8[30..31] = 0;
    next;
 8. ls_out_stateful (northd.c:8881): reg0[1] == 1 && reg0[13] == 0, priority 100, uuid 7af225f6
    ct_commit { ct_mark.blocked = 0; };
    next;
 9. ls_out_check_port_sec (northd.c:7087): 1, priority 0, uuid 58474fca
    reg0[15] = check_out_port_sec();
    next;
10. ls_out_apply_port_sec (northd.c:7092): 1, priority 0, uuid 55ce0a48
    output;
    /* output to "server_server-597c7db97b-pmjdq", type "" */
